Minor final fixes

--- a/groupsigncreate.html
+++ b/groupsigncreate.html
@@ -917,7 +917,7 @@
         document.getElementById("pubKeyDisplay").style.display = "block"
         document.getElementById("pubKeyDisplay").innerHTML = ""
         document.getElementById("wait").style.display = "block"
-        document.getElementById("wait").innerText = "Waiting for Signers " + userList.length + " Out of " + signers
+        document.getElementById("wait").innerText = "Waiting for Signers " + userList.length + " Out of " + signers //not accurate
 
         for (let index = 0; index < userList.length; index++) {
 
