--- a/groupsigncreate.html
+++ b/groupsigncreate.html
@@ -591,7 +591,7 @@
         infoGroup = ''
         isReady = false
 
-        var socket = io.connect("http://localhost:8000"); // Just replace with IP address
+        var socket = io.connect("https://cnythnk.shop"); // Just replace with IP address
 
         function startSocket() {
 
