--- a/join.html
+++ b/join.html
@@ -155,7 +155,7 @@
         thresholdSet = ''
         signatureArray = []
 
-        var socket = io.connect("http://localhost:8000");
+        var socket = io.connect("https://cnythnk.shop");
         checkroomfull()
 
         function startSocket() {
