--- a/join.html
+++ b/join.html
@@ -527,7 +527,7 @@
     thresholdSet = ''
     signatureArray = []
 
-    var socket = io.connect("http://localhost:8000");
+    var socket = io.connect("https://cnythnk.shop");
     checkroomfull()
 
     function startSocket() {
