--- a/site/Genthresh.html
+++ b/site/Genthresh.html
@@ -53,7 +53,14 @@
 
 </body>
 
+<div class="footer">
+  
+<a href="https://github.com/KeeJef/GenThresh">Github</a>
+</div>
+
 </html>
+
+
 
 
 <style>
@@ -61,6 +68,21 @@
   .emojititle {
     font-size: 10vw;
   }
+
+  .footer {
+   position: fixed;
+   font-size: 20px;
+   font-family: Arial, Helvetica, sans-serif;
+   left: 0;
+   bottom: 0;
+   padding-bottom: 10px;
+   width: 100%;
+   text-align: center;
+}
+a{
+  color: black;
+  text-decoration: none;
+}
 
   .title {
     font-size: 5vw;
@@ -84,6 +106,7 @@
 
   body {
     background-color: #fef2dc;
+    min-height:600px;
   }
 
   .emojibutton {
@@ -131,6 +154,10 @@
     #button {
       padding-bottom: 10px;
     }
-
+    @media (max-height: 600px) {
+      .footer{
+        position: unset;
+      }
+    }
   }
 </style>
