--- a/site/aggregate.html
+++ b/site/aggregate.html
@@ -16,7 +16,7 @@
         Aggregate
     </div>
     <div class="emojititle">
-        <a class="emojilink" href="Genthresh.html">🧙</a>
+        <a class="emojilink" href="Genthresh.html">🧙‍♂️</a>
 
     </div>
 </div>
