--- a/site/joinE.html
+++ b/site/joinE.html
@@ -18,7 +18,7 @@
         Group Sign
     </div>
     <div class="emojititle">
-        <a class="emojilink" href="Genthresh.html">🧙</a>
+        <a class="emojilink" href="Genthresh.html">🧙‍♂️</a>
     </div>
 </div>
 
