--- a/site/signsingle.html
+++ b/site/signsingle.html
@@ -15,7 +15,7 @@
         Sign
     </div>
     <div class="emojititle">
-        <a class="emojilink" href="Genthresh.html">🧙</a>
+        <a class="emojilink" href="Genthresh.html">🧙‍♂️</a>
 
     </div>
 </div>
