--- a/site/groupsigncreate.html
+++ b/site/groupsigncreate.html
@@ -19,7 +19,7 @@
             Group Sign
         </div>
         <div class="emojititle">
-            <a class="emojilink" href="Genthresh.html">🧙</a>
+            <a class="emojilink" href="Genthresh.html">🧙‍♂️</a>
         </div>
     </div>
 
