--- a/site/verify.html
+++ b/site/verify.html
@@ -16,7 +16,7 @@
         Verify
     </div>
     <div class="emojititle">
-        <a class="emojilink" href="Genthresh.html">🧙</a>
+        <a class="emojilink" href="Genthresh.html">🧙‍♂️</a>
 
     </div>
 </div>
