--- a/site/Genthresh.html
+++ b/site/Genthresh.html
@@ -51,11 +51,17 @@
 
   </div>
 
+  <div class="floatingcontainer">
+    <div class="keysdisplay" id="pubKeyDisplay">
+    GenThresh uses BLS12-381 to allow you to generate, sign, aggregate and verify BLS signatures. 
+    You may also create rooms, where you can automatically share and aggregate signatures.
+    </div>
+  </div>
 </body>
 
 <div class="footer">
-  
-<a href="https://github.com/KeeJef/GenThresh">Github</a>
+
+  <a href="https://github.com/KeeJef/GenThresh">Github</a>
 </div>
 
 </html>
@@ -70,24 +76,46 @@
   }
 
   .footer {
-   position: fixed;
-   font-size: 20px;
-   font-family: Arial, Helvetica, sans-serif;
-   left: 0;
-   bottom: 0;
-   padding-bottom: 10px;
-   width: 100%;
-   text-align: center;
-}
-a{
-  color: grey;
-  text-decoration: none;
-}
+    position: fixed;
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    left: 0;
+    bottom: 0;
+    padding-bottom: 10px;
+    width: 100%;
+    text-align: center;
+  }
+
+  a {
+    color: grey;
+    text-decoration: none;
+  }
 
   .title {
     font-size: 5vw;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
+  }
+
+  .floatingcontainer {
+    padding-top: 20px;
+    margin-right: 15%;
+    margin-left: 15%;
+  }
+
+  .keysdisplay {
+
+    font-family: 'Poppins', sans-serif;
+    font-size: 25px;
+    text-align: center;
+    word-wrap: break-word;
+    border-radius: 25px;
+    border: 2px solid #8d7745;
+    padding: 20px;
+    max-height: 300px;
+    overflow: hidden;
+    overflow-y: auto;
+
   }
 
   #button {
@@ -106,7 +134,7 @@ a{
 
   body {
     background-color: #fef2dc;
-    min-height:600px;
+    min-height: 600px;
   }
 
   .emojibutton {
@@ -154,8 +182,9 @@ a{
     #button {
       padding-bottom: 10px;
     }
+
     @media (max-height: 600px) {
-      .footer{
+      .footer {
         position: unset;
       }
     }
