--- a/genthresh/public/index.html
+++ b/genthresh/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html style="background-color:#fef2dc; overflow-y: hidden;" lang="en">
+<html style="background-color:#fef2dc;" lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
